// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`satSet.addSatExtraFunctions 0 1`] = `undefined`;

exports[`satSet.convertIdArrayToSatnumArray 0 1`] = `
Array [
  "00005",
  "00005",
  "00005",
]
`;

exports[`satSet.convertIdArrayToSatnumArray 1 1`] = `
Array [
  "00005",
  "00005",
  "00005",
]
`;

exports[`satSet.convertIdArrayToSatnumArray 2 1`] = `
Array [
  "00005",
  "00005",
  "00005",
]
`;

exports[`satSet.convertIdArrayToSatnumArray 3 1`] = `
Array [
  "00005",
  "00005",
  "00005",
]
`;

exports[`satSet.convertIdArrayToSatnumArray 4 1`] = `
Array [
  "00005",
  "00005",
  "00005",
]
`;

exports[`satSet.convertIdArrayToSatnumArray 5 1`] = `Array []`;

exports[`satSet.convertSatnumArrayToIdArray 0 1`] = `
Array [
  1,
  1,
  1,
  1,
  1,
]
`;

exports[`satSet.convertSatnumArrayToIdArray 1 1`] = `
Array [
  1,
  1,
  1,
  1,
]
`;

exports[`satSet.convertSatnumArrayToIdArray 2 1`] = `
Array [
  1,
  1,
  1,
  1,
  1,
]
`;

exports[`satSet.convertSatnumArrayToIdArray 3 1`] = `
Array [
  1,
  1,
  1,
  1,
]
`;

exports[`satSet.convertSatnumArrayToIdArray 4 1`] = `
Array [
  1,
  1,
  1,
  1,
]
`;

exports[`satSet.convertSatnumArrayToIdArray 5 1`] = `Array []`;

exports[`satSet.cruncherDotsManagerInteraction 0 1`] = `undefined`;

exports[`satSet.cruncherExtraUpdate 0 1`] = `undefined`;

exports[`satSet.getIdFromEci 0 1`] = `-1`;

exports[`satSet.getIdFromEci 1 1`] = `-1`;

exports[`satSet.getIdFromEci 2 1`] = `-1`;

exports[`satSet.getIdFromEci 3 1`] = `-1`;

exports[`satSet.getIdFromEci 4 1`] = `-1`;

exports[`satSet.getIdFromEci 5 1`] = `-1`;

exports[`satSet.getIdFromIntlDes 0 1`] = `5`;

exports[`satSet.getIdFromIntlDes 1 1`] = `null`;

exports[`satSet.getIdFromObjNum 0 1`] = `null`;

exports[`satSet.getIdFromObjNum 1 1`] = `null`;

exports[`satSet.getIdFromStarName 0 1`] = `null`;

exports[`satSet.getIdFromStarName 1 1`] = `null`;

exports[`satSet.getSat 0 1`] = `null`;

exports[`satSet.getSat 1 1`] = `null`;

exports[`satSet.getSat 2 1`] = `
Object {
  "TLE1": "1 25544U 98067A   21203.40407588  .00003453  00000-0  71172-4 0  9991",
  "TLE2": "2 25544  51.6423 168.5744 0001475 184.3976 313.3642 15.48839820294053",
  "active": true,
  "apogee": 184.3976,
  "argPe": 0,
  "country": "ISS",
  "dryMass": "",
  "eccentricity": 0.00003453,
  "getAltitude": [Function],
  "getDirection": [Function],
  "getTEARR": [Function],
  "id": 0,
  "inSun": 0,
  "inSunChange": true,
  "inView": 0,
  "inViewChange": false,
  "inclination": 51.6423,
  "intlDes": "1998-AEF",
  "isInSun": [Function],
  "launchMass": "",
  "launchSite": "TTMTR",
  "launchVehicle": "Proton-K",
  "lifetime": 30,
  "lon": 168.5744,
  "manufacturer": "Boeing Satellite Systems (prime)/Multinational",
  "meanMotion": 15.48839820294053,
  "mission": "Final size of a Boeing 747; first component.",
  "name": "ISS (ZARYA)",
  "owner": "National Aeronautics and Space Administration (NASA)/Multinational",
  "perigee": 1475,
  "period": 313.3642,
  "position": Object {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "power": "",
  "purpose": "Space Science",
  "raan": 0,
  "rcs": "99.0524",
  "sccNum": "00005",
  "semimajorAxis": 21203.40407588,
  "setRAE": [Function],
  "static": false,
  "staticNum": null,
  "type": 1,
  "user": "Government",
  "velocity": Object {
    "total": 0,
    "x": 0,
    "y": 0,
    "z": 0,
  },
}
`;

exports[`satSet.getSat 3 1`] = `null`;

exports[`satSet.getSat 4 1`] = `
Object {
  "TLE1": "1 25544U 98067A   21203.40407588  .00003453  00000-0  71172-4 0  9991",
  "TLE2": "2 25544  51.6423 168.5744 0001475 184.3976 313.3642 15.48839820294053",
  "active": true,
  "apogee": 184.3976,
  "argPe": 0,
  "country": "ISS",
  "dryMass": "",
  "eccentricity": 0.00003453,
  "getAltitude": [Function],
  "getDirection": [Function],
  "getTEARR": [Function],
  "id": 1,
  "inSun": 0,
  "inSunChange": true,
  "inView": 0,
  "inViewChange": true,
  "inclination": 51.6423,
  "intlDes": "1998-AEF",
  "isInSun": [Function],
  "launchMass": "",
  "launchSite": "TTMTR",
  "launchVehicle": "Proton-K",
  "lifetime": 30,
  "lon": 168.5744,
  "manufacturer": "Boeing Satellite Systems (prime)/Multinational",
  "meanMotion": 15.48839820294053,
  "mission": "Final size of a Boeing 747; first component.",
  "name": "ISS (ZARYA)",
  "owner": "National Aeronautics and Space Administration (NASA)/Multinational",
  "perigee": 1475,
  "period": 313.3642,
  "position": Object {
    "x": undefined,
    "y": undefined,
    "z": undefined,
  },
  "power": "",
  "purpose": "Space Science",
  "raan": 0,
  "rcs": "99.0524",
  "sccNum": "00005",
  "semimajorAxis": 21203.40407588,
  "setRAE": [Function],
  "static": false,
  "staticNum": null,
  "type": 1,
  "user": "Government",
  "velocity": Object {
    "total": 0,
    "x": 0,
    "y": 0,
    "z": 0,
  },
}
`;

exports[`satSet.getSat 5 1`] = `null`;

exports[`satSet.getSatExtraOnly 0 1`] = `
Object {
  "TLE1": "1 25544U 98067A   21203.40407588  .00003453  00000-0  71172-4 0  9991",
  "TLE2": "2 25544  51.6423 168.5744 0001475 184.3976 313.3642 15.48839820294053",
  "active": true,
  "apogee": 184.3976,
  "argPe": 0,
  "country": "ISS",
  "dryMass": "",
  "eccentricity": 0.00003453,
  "getAltitude": [Function],
  "getDirection": [Function],
  "getTEARR": [Function],
  "id": 0,
  "inSun": 0,
  "inSunChange": true,
  "inView": 0,
  "inViewChange": false,
  "inclination": 51.6423,
  "intlDes": "1998-AEF",
  "isInSun": [Function],
  "launchMass": "",
  "launchSite": "TTMTR",
  "launchVehicle": "Proton-K",
  "lifetime": 30,
  "lon": 168.5744,
  "manufacturer": "Boeing Satellite Systems (prime)/Multinational",
  "meanMotion": 15.48839820294053,
  "mission": "Final size of a Boeing 747; first component.",
  "name": "ISS (ZARYA)",
  "owner": "National Aeronautics and Space Administration (NASA)/Multinational",
  "perigee": 1475,
  "period": 313.3642,
  "position": Object {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "power": "",
  "purpose": "Space Science",
  "raan": 0,
  "rcs": "99.0524",
  "sccNum": "00005",
  "semimajorAxis": 21203.40407588,
  "setRAE": [Function],
  "static": false,
  "staticNum": null,
  "type": 1,
  "user": "Government",
  "velocity": Object {
    "total": 0,
    "x": 0,
    "y": 0,
    "z": 0,
  },
}
`;

exports[`satSet.getSatExtraOnly 1 1`] = `null`;

exports[`satSet.getSatExtraOnly 2 1`] = `
Object {
  "TLE1": "1 25544U 98067A   21203.40407588  .00003453  00000-0  71172-4 0  9991",
  "TLE2": "2 25544  51.6423 168.5744 0001475 184.3976 313.3642 15.48839820294053",
  "active": true,
  "apogee": 184.3976,
  "argPe": 0,
  "country": "ISS",
  "dryMass": "",
  "eccentricity": 0.00003453,
  "getAltitude": [Function],
  "getDirection": [Function],
  "getTEARR": [Function],
  "id": 1,
  "inSun": 0,
  "inSunChange": true,
  "inView": 0,
  "inViewChange": true,
  "inclination": 51.6423,
  "intlDes": "1998-AEF",
  "isInSun": [Function],
  "launchMass": "",
  "launchSite": "TTMTR",
  "launchVehicle": "Proton-K",
  "lifetime": 30,
  "lon": 168.5744,
  "manufacturer": "Boeing Satellite Systems (prime)/Multinational",
  "meanMotion": 15.48839820294053,
  "mission": "Final size of a Boeing 747; first component.",
  "name": "ISS (ZARYA)",
  "owner": "National Aeronautics and Space Administration (NASA)/Multinational",
  "perigee": 1475,
  "period": 313.3642,
  "position": Object {
    "x": undefined,
    "y": undefined,
    "z": undefined,
  },
  "power": "",
  "purpose": "Space Science",
  "raan": 0,
  "rcs": "99.0524",
  "sccNum": "00005",
  "semimajorAxis": 21203.40407588,
  "setRAE": [Function],
  "static": false,
  "staticNum": null,
  "type": 1,
  "user": "Government",
  "velocity": Object {
    "total": 0,
    "x": 0,
    "y": 0,
    "z": 0,
  },
}
`;

exports[`satSet.getSatExtraOnly 3 1`] = `null`;

exports[`satSet.getSatExtraOnly 4 1`] = `null`;

exports[`satSet.getSatExtraOnly 5 1`] = `null`;

exports[`satSet.getSatInSun 0 1`] = `
Float32Array [
  0,
  0,
  0,
]
`;

exports[`satSet.getSatInView 0 1`] = `
Float32Array [
  0,
  0,
  0,
]
`;

exports[`satSet.getSatInViewOnly 0 1`] = `null`;

exports[`satSet.getSatInViewOnly 1 1`] = `null`;

exports[`satSet.getSatInViewOnly 2 1`] = `
Object {
  "TLE1": "1 25544U 98067A   21203.40407588  .00003453  00000-0  71172-4 0  9991",
  "TLE2": "2 25544  51.6423 168.5744 0001475 184.3976 313.3642 15.48839820294053",
  "active": true,
  "apogee": 184.3976,
  "argPe": 0,
  "country": "ISS",
  "dryMass": "",
  "eccentricity": 0.00003453,
  "getAltitude": [Function],
  "getDirection": [Function],
  "getTEARR": [Function],
  "id": 1,
  "inSun": 0,
  "inSunChange": true,
  "inView": 0,
  "inViewChange": true,
  "inclination": 51.6423,
  "intlDes": "1998-AEF",
  "isInSun": [Function],
  "launchMass": "",
  "launchSite": "TTMTR",
  "launchVehicle": "Proton-K",
  "lifetime": 30,
  "lon": 168.5744,
  "manufacturer": "Boeing Satellite Systems (prime)/Multinational",
  "meanMotion": 15.48839820294053,
  "mission": "Final size of a Boeing 747; first component.",
  "name": "ISS (ZARYA)",
  "owner": "National Aeronautics and Space Administration (NASA)/Multinational",
  "perigee": 1475,
  "period": 313.3642,
  "position": Object {
    "x": undefined,
    "y": undefined,
    "z": undefined,
  },
  "power": "",
  "purpose": "Space Science",
  "raan": 0,
  "rcs": "99.0524",
  "sccNum": "00005",
  "semimajorAxis": 21203.40407588,
  "setRAE": [Function],
  "static": false,
  "staticNum": null,
  "type": 1,
  "user": "Government",
  "velocity": Object {
    "total": 0,
    "x": 0,
    "y": 0,
    "z": 0,
  },
}
`;

exports[`satSet.getSatInViewOnly 3 1`] = `
Object {
  "TLE1": "1 25544U 98067A   21203.40407588  .00003453  00000-0  71172-4 0  9991",
  "TLE2": "2 25544  51.6423 168.5744 0001475 184.3976 313.3642 15.48839820294053",
  "active": true,
  "apogee": 184.3976,
  "argPe": 0,
  "country": "ISS",
  "dryMass": "",
  "eccentricity": 0.00003453,
  "getAltitude": [Function],
  "getDirection": [Function],
  "getTEARR": [Function],
  "id": 0,
  "inSun": 0,
  "inSunChange": true,
  "inView": 0,
  "inViewChange": false,
  "inclination": 51.6423,
  "intlDes": "1998-AEF",
  "isInSun": [Function],
  "launchMass": "",
  "launchSite": "TTMTR",
  "launchVehicle": "Proton-K",
  "lifetime": 30,
  "lon": 168.5744,
  "manufacturer": "Boeing Satellite Systems (prime)/Multinational",
  "meanMotion": 15.48839820294053,
  "mission": "Final size of a Boeing 747; first component.",
  "name": "ISS (ZARYA)",
  "owner": "National Aeronautics and Space Administration (NASA)/Multinational",
  "perigee": 1475,
  "period": 313.3642,
  "position": Object {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "power": "",
  "purpose": "Space Science",
  "raan": 0,
  "rcs": "99.0524",
  "sccNum": "00005",
  "semimajorAxis": 21203.40407588,
  "setRAE": [Function],
  "static": false,
  "staticNum": null,
  "type": 1,
  "user": "Government",
  "velocity": Object {
    "total": 0,
    "x": 0,
    "y": 0,
    "z": 0,
  },
}
`;

exports[`satSet.getSatInViewOnly 4 1`] = `null`;

exports[`satSet.getSatInViewOnly 5 1`] = `null`;

exports[`satSet.getSatPosOnly 0 1`] = `null`;

exports[`satSet.getSatPosOnly 1 1`] = `null`;

exports[`satSet.getSatPosOnly 2 1`] = `
Object {
  "TLE1": "1 25544U 98067A   21203.40407588  .00003453  00000-0  71172-4 0  9991",
  "TLE2": "2 25544  51.6423 168.5744 0001475 184.3976 313.3642 15.48839820294053",
  "active": true,
  "apogee": 184.3976,
  "argPe": 0,
  "country": "ISS",
  "dryMass": "",
  "eccentricity": 0.00003453,
  "getAltitude": [Function],
  "getDirection": [Function],
  "getTEARR": [Function],
  "id": 1,
  "inSun": 0,
  "inSunChange": true,
  "inView": 0,
  "inViewChange": true,
  "inclination": 51.6423,
  "intlDes": "1998-AEF",
  "isInSun": [Function],
  "launchMass": "",
  "launchSite": "TTMTR",
  "launchVehicle": "Proton-K",
  "lifetime": 30,
  "lon": 168.5744,
  "manufacturer": "Boeing Satellite Systems (prime)/Multinational",
  "meanMotion": 15.48839820294053,
  "mission": "Final size of a Boeing 747; first component.",
  "name": "ISS (ZARYA)",
  "owner": "National Aeronautics and Space Administration (NASA)/Multinational",
  "perigee": 1475,
  "period": 313.3642,
  "position": Object {
    "x": undefined,
    "y": undefined,
    "z": undefined,
  },
  "power": "",
  "purpose": "Space Science",
  "raan": 0,
  "rcs": "99.0524",
  "sccNum": "00005",
  "semimajorAxis": 21203.40407588,
  "setRAE": [Function],
  "static": false,
  "staticNum": null,
  "type": 1,
  "user": "Government",
  "velocity": Object {
    "total": 0,
    "x": 0,
    "y": 0,
    "z": 0,
  },
}
`;

exports[`satSet.getSatPosOnly 3 1`] = `
Object {
  "TLE1": "1 25544U 98067A   21203.40407588  .00003453  00000-0  71172-4 0  9991",
  "TLE2": "2 25544  51.6423 168.5744 0001475 184.3976 313.3642 15.48839820294053",
  "active": true,
  "apogee": 184.3976,
  "argPe": 0,
  "country": "ISS",
  "dryMass": "",
  "eccentricity": 0.00003453,
  "getAltitude": [Function],
  "getDirection": [Function],
  "getTEARR": [Function],
  "id": 0,
  "inSun": 0,
  "inSunChange": true,
  "inView": 0,
  "inViewChange": false,
  "inclination": 51.6423,
  "intlDes": "1998-AEF",
  "isInSun": [Function],
  "launchMass": "",
  "launchSite": "TTMTR",
  "launchVehicle": "Proton-K",
  "lifetime": 30,
  "lon": 168.5744,
  "manufacturer": "Boeing Satellite Systems (prime)/Multinational",
  "meanMotion": 15.48839820294053,
  "mission": "Final size of a Boeing 747; first component.",
  "name": "ISS (ZARYA)",
  "owner": "National Aeronautics and Space Administration (NASA)/Multinational",
  "perigee": 1475,
  "period": 313.3642,
  "position": Object {
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "power": "",
  "purpose": "Space Science",
  "raan": 0,
  "rcs": "99.0524",
  "sccNum": "00005",
  "semimajorAxis": 21203.40407588,
  "setRAE": [Function],
  "static": false,
  "staticNum": null,
  "type": 1,
  "user": "Government",
  "velocity": Object {
    "total": 0,
    "x": 0,
    "y": 0,
    "z": 0,
  },
}
`;

exports[`satSet.getSatPosOnly 4 1`] = `null`;

exports[`satSet.getSatPosOnly 5 1`] = `null`;

exports[`satSet.getSatVel 0 1`] = `
Float32Array [
  0,
  0,
  0,
]
`;

exports[`satSet.getScreenCoords 0 1`] = `
Object {
  "error": true,
  "x": NaN,
  "y": NaN,
  "z": NaN,
}
`;

exports[`satSet.getScreenCoords 1 1`] = `
Object {
  "error": true,
  "x": NaN,
  "y": NaN,
  "z": NaN,
}
`;

exports[`satSet.getScreenCoords 2 1`] = `
Object {
  "error": true,
  "x": NaN,
  "y": NaN,
  "z": NaN,
}
`;

exports[`satSet.getScreenCoords 3 1`] = `
Object {
  "error": true,
  "x": NaN,
  "y": NaN,
  "z": NaN,
}
`;

exports[`satSet.getScreenCoords 4 1`] = `
Object {
  "error": true,
  "x": -125134.46216952907,
  "y": 55817.85373904889,
  "z": -63.31606182443326,
}
`;

exports[`satSet.getScreenCoords 5 1`] = `
Object {
  "error": true,
  "x": NaN,
  "y": NaN,
  "z": NaN,
}
`;

exports[`satSet.getSensorFromSensorName 0 1`] = `3`;

exports[`satSet.getSensorFromSensorName 1 1`] = `-1`;

exports[`satSet.mergeSat 0 1`] = `undefined`;

exports[`satSet.onCruncherReady 0 1`] = `undefined`;

exports[`satSet.parseGetVariables 0 1`] = `undefined`;

exports[`satSet.resetSatInSun 0 1`] = `undefined`;

exports[`satSet.resetSatInView 0 1`] = `undefined`;

exports[`satSet.satCruncherOnMessage 0 1`] = `undefined`;

exports[`satSet.satCruncherOnMessage 0 2`] = `undefined`;

exports[`satSet.selectSat 0 1`] = `undefined`;

exports[`satSet.selectSat 1 1`] = `undefined`;

exports[`satSet.selectSat 2 1`] = `undefined`;

exports[`satSet.selectSat 3 1`] = `undefined`;

exports[`satSet.selectSat 4 1`] = `undefined`;

exports[`satSet.selectSat 5 1`] = `undefined`;

exports[`satSet.setHover 0 1`] = `undefined`;

exports[`satSet.setSat 0 1`] = `undefined`;

exports[`satSet.setSat 1 1`] = `undefined`;

exports[`satSet.setSat 2 1`] = `undefined`;

exports[`satSet.setSat 3 1`] = `undefined`;

exports[`satSet.setSat 4 1`] = `undefined`;

exports[`satSet.setSat 5 1`] = `undefined`;
